Added a new feature for printing multiple results at a time
1. Added a for printing multiple results.
2. Added some unit testing .

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .idea
 .env
 /webroot/img/student-pictures/*
+/webroot/img/image-banner.png
 /config/Migrations/schema-dump-default.lock
 todo.txt
 change-logs.txt
