--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "cakemanager/cakephp-settings": "dev-master",
         "CakeDC/Users": "^6.0",
         "muffin/FootPrint": "^1.1",
-        "dereuromark/cakephp-databaselog": "^2.3"
+        "dereuromark/cakephp-databaselog": "^2.3",
+        "sentry/sentry": "^1.10",
+        "connehito/cake-sentry": "^1.0"
     },
     "require-dev": {
         "psy/psysh": "@stable",
