Fixed display bugs in check result view and corrected a bug in admin layout

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .env
 /webroot/img/student-pictures/*
 /webroot/img/image-banner.png
+/webroot/img/school-logo.png
 /config/Migrations/schema-dump-default.lock
 config/Seeds/StudentsSeed.php
 todo.txt
