Wrote shell algorithm to resize student photos and change the directory

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .idea
 .env
 /webroot/img/student-pictures/*
+/webroot/img/student-photos/*
 /webroot/img/image-banner.png
 /webroot/img/school-logo.png
 /config/Migrations/schema-dump-default.lock
