--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .idea
 .env
 /webroot/img/student-pictures/*
+/webroot/img/schools/*
 /webroot/img/student-photos/*
 /webroot/img/image-banner.*
 /webroot/img/school-logo.png
